# phys-bench

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
assets/franka_emika_panda/: mjx_panda.xml
assets/objects/: bottle.xml  scene_bottle.xml
assets/objects/bottle/: bottle.mtl
docker_builder/: .gitignore  Dockerfile  README.md  build.sh  clean-cache.sh  docker-compose.yml  run.sh
docker_builder/assets/project_genesis/: pyproject.toml
docker_builder/assets/project_isaacgym/: pyproject.toml
docker_builder/assets/project_mjwarp/: pyproject.toml
docker_builder/assets/project_motrixsim/: pyproject.toml
docker_builder/scripts/: build_pytorch_wheel.sh  entrypoint.sh  install_wheels.sh  test_gpu.py
grasp/: generate_report.py  grasp_shaking_test_genesis.py  grasp_shaking_test_motrix.py  grasp_shaking_test_mujoco.py  grasp_shaking_test_mujoco_warp.py  run_all_grasp_tests.py  test_output_utils.py  test_result_visualizer.py
grasp-bench/: test_genesis_ball.py  test_genesis_bottle.py  test_genesis_cube.py  test_motrixsim_ball.py  test_motrixsim_cube.py
grasp-bench/xml/: mjx_pick_bottle.xml  pick_cube.xml
grasp/xml/: mjx_pick_ball.xml  mjx_pick_bottle.xml  mjx_pick_cube.xml  pick_ball.xml  pick_bottle.xml  share.xml
output/: comparison_report.html  genesis_grasp_shake_ball_mjxtrue_dt0_002.json  genesis_grasp_shake_ball_mjxtrue_dt0_010.json  genesis_grasp_shake_bottle_mjxtrue_dt0_002.json  genesis_grasp_shake_bottle_mjxtrue_dt0_010.json  genesis_grasp_shake_cube_mjxtrue_dt0_002.json  genesis_grasp_shake_cube_mjxtrue_dt0_010.json  motrix_grasp_shake_ball_mjxtrue_dt0_002.json  motrix_grasp_shake_ball_mjxtrue_dt0_010.json  motrix_grasp_shake_bottle_mjxtrue_dt0_002.json  motrix_grasp_shake_bottle_mjxtrue_dt0_010.json  motrix_grasp_shake_cube_mjxtrue_dt0_002.json  motrix_grasp_shake_cube_mjxtrue_dt0_010.json  mujoco_grasp_shake_ball_mjxtrue_dt0_002.json  mujoco_grasp_shake_ball_mjxtrue_dt0_010.json  mujoco_grasp_shake_bottle_mjxtrue_dt0_002.json  mujoco_grasp_shake_bottle_mjxtrue_dt0_010.json  mujoco_grasp_shake_cube_mjxtrue_dt0_002.json  mujoco_grasp_shake_cube_mjxtrue_dt0_010.json
