[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-benchmark"
version = "0.1.0"
description = "Genesis benchmarking scripts"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "numpy",
    "torch",
    "genesis-world",
]
